Reduce input box text size, fix blurry images

--- a/src/index.scss
+++ b/src/index.scss
@@ -275,8 +275,9 @@ body {
         border: none;
         border-radius: 15px;
         padding: 0 20px;
-        font-size: 25px;
+        font-size: 22px;
         font-weight: 500;
+        font-family: inherit;
         color: var(--text-color);
         background-color: transparent;
         outline: none;
@@ -388,4 +389,10 @@ body {
 /* custom scrollbar */
 ::-webkit-scrollbar {
   display: none;
+}
+
+// fix for blurry images on transform
+img {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
